--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>PEH2 React Boilerplate</title>
+    <title>PEH2 Expensify App</title>
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
   </head>
   <body>
