--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>PEH2 Expensify App</title>
-    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
-  </head>
-  <body>
-    <div id="root"></div>
-    <script src="/bundle.js"></script>
-  </body>
+<html>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Expensify</title>
+  <link rel="icon" type="image/png" href="/images/favicon.png" />
+  <link rel="stylesheet" type="text/css" href="/dist/main.css" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script src="/dist/bundle.js"></script>
+</body>
+
 </html>
